# gfms-from-scratch.github.io

./: .gitignore  .pre-commit-config.yaml  AUTHORING_GUIDE.md  CLAUDE.md  CONTRIBUTING.md  COURSE_PHILOSOPHY_AND_PEDAGOGY.md  COURSE_RESTRUCTURE_PLAN.md  EMAIL_TO_HPC_ADMIN.md  GDAL_PROJ_HPC_TROUBLESHOOTING.md  HPC_ADMIN_KERNEL_SETUP.md  HPC_QUICKSTART.md  KERNEL_CONFIG_QUICK_REF.md  Makefile  PRE_COMMIT_QUICK_START.md  README.md  SEND_TO_ADMIN_README.md  Syllabus.html  Syllabus.md  WEEK2.ipynb  WEEK3.ipynb  Week_01.ipynb  Week_01_Complete.ipynb  Z_MYPROJECT_W2.ipynb  _quarto.yml  bandit.yaml  build_docs.py  cheatsheets.html  cheatsheets.qmd  cloud_masking_fix_report.md  debug_test.html  environment-mac-gpu.yml  environment.yml  generic_gfm_workflows_backup.qmd  index.html  index.qmd  meds-website-styles.scss  pyproject.toml  requirements.txt  robots.txt  search.json  (+2 more)
.cursor/rules/: class_material_guidelines.mdc  gfm_interactive_session_rules.mdc
.github/workflows/: deploy-org-pages.yml
book/: QUARTO_USAGE.md  Syllabus.html  Syllabus.md  _quarto.yml  build_docs.py  c03b-terratorch-foundations.qmd  cheatsheets.html  cheatsheets.qmd  debug_test.html  debug_test.qmd  index.qmd  meds-website-styles.scss  pages_deploy_key  pages_deploy_key.pub
book/chapters/: c00a-foundation_model_architectures.qmd  c00b-introduction-to-deeplearning-architecture.qmd  c01-geospatial-data-foundations-CLEAN.qmd  c01-geospatial-data-foundations-OLD.qmd  c01-geospatial-data-foundations.qmd  c02-spatial-temporal-attention-mechanisms.qmd  c03-complete-gfm-architecture.qmd  c03-terratorch-foundations.qmd  c03a-terratorch-foundations copy.qmd.backup  c03a-terratorch-foundations copy.qmd.backup2  c03a-terratorch-foundations.qmd  c04-pretraining-implementation.qmd  c05-training-loop-optimization.qmd  c06-model-evaluation-analysis.qmd  c07-integration-with-existing-models.qmd  c08-task-specific-finetuning.qmd  c09-model-implementation-deployment.qmd  c10-project-presentations-synthesis.html  c10-project-presentations-synthesis.qmd
book/course-materials/: c00-introduction-to-deeplearning-architecture.qmd  c00a-foundation_model_architectures.qmd  c00b-introduction-to-deeplearning-architecture.qmd  c01-geospatial-data-foundations.qmd  (+19 more)
chapters/: c00a-foundation_model_architectures.html  c01-geospatial-data-foundations.html  c02-spatial-temporal-attention-mechanisms.html  c03-complete-gfm-architecture.html  c04-pretraining-implementation.html  c06-model-evaluation-analysis.html  c07-integration-with-existing-models.html  c09-model-implementation-deployment.html
course-materials/: week0.qmd  week1.qmd  week10.qmd  week2.qmd  week3.qmd  week4.qmd  week5.qmd  week6.qmd  week7.qmd  week8.qmd  week9.qmd
data/: README.md  build_from_stac.py
docs/: CLAUDE.html  PRE_COMMIT_SETUP.md  Syllabus.html  Syllabus.md  cheatsheets.html  debug_test.html  index.html  search.json  sitemap.xml  test_fontawesome.html
extras/: HLS_downloads.html  grit-hpc-quick-reference.html  grit-hpc-setup.html
geogfm/: README.md  __init__.py  c01.py  c02.py  c03.py
installation/: GRIT_SETUP.md  README.md  TROUBLESHOOTING.md  UCSB_AI_SANDBOX_SETUP.md  demo_universal_gpu.py  environment-gpu.yml  geoai_environment_smoketest.ipynb  models_catalog.yml  platform_setup_guide.py  requirements-gpu.txt  setup_geoai_mac.sh  system_capability_report.py  test_gpu_setup_universal.py  verify_geoai_setup.py
nbs/: Week_01_Server.ipynb
scripts/: check_antipatterns.py  check_course_structure.py  diagnose_gdal_hpc.py  setup_precommit.sh
tests/: README_path_shortcode_test.md  test_hls_downloads.py  test_path_shortcode_filter.py  test_tangle_filter.py
(+434 files in other folders)
